components/platform/keycloak-operator/base/cilium-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zylos-keycloak-operator-cnp
  namespace: zylos-identity
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak-operator
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
